--- a/404.html
+++ b/404.html
@@ -9,13 +9,13 @@
 <meta name="keywords" content="">
 <meta name="description" content="">
 <meta name="author" content="">
-<link rel="canonical" href="http://algorithms.github.io/404.html">
-<link crossorigin="anonymous" href="/assets/css/stylesheet.41f2d211c00e636a3c229c52ef2d4299a66891ae66771098993b13bca7972ae6.css" integrity="sha256-QfLSEcAOY2o8IpxS7y1CmaZoka5mdxCYmTsTvKeXKuY=" rel="preload stylesheet" as="style">
-<link rel="icon" href="http://algorithms.github.io/favicon.ico">
-<link rel="icon" type="image/png" sizes="16x16" href="http://algorithms.github.io/favicon-16x16.png">
-<link rel="icon" type="image/png" sizes="32x32" href="http://algorithms.github.io/favicon-32x32.png">
-<link rel="apple-touch-icon" href="http://algorithms.github.io/apple-touch-icon.png">
-<link rel="mask-icon" href="http://algorithms.github.io/safari-pinned-tab.svg">
+<link rel="canonical" href="https://antdon.github.io/algorithms.github.io/404.html">
+<link crossorigin="anonymous" href="/algorithms.github.io/assets/css/stylesheet.41f2d211c00e636a3c229c52ef2d4299a66891ae66771098993b13bca7972ae6.css" integrity="sha256-QfLSEcAOY2o8IpxS7y1CmaZoka5mdxCYmTsTvKeXKuY=" rel="preload stylesheet" as="style">
+<link rel="icon" href="https://antdon.github.io/algorithms.github.io/favicon.ico">
+<link rel="icon" type="image/png" sizes="16x16" href="https://antdon.github.io/algorithms.github.io/favicon-16x16.png">
+<link rel="icon" type="image/png" sizes="32x32" href="https://antdon.github.io/algorithms.github.io/favicon-32x32.png">
+<link rel="apple-touch-icon" href="https://antdon.github.io/algorithms.github.io/apple-touch-icon.png">
+<link rel="mask-icon" href="https://antdon.github.io/algorithms.github.io/safari-pinned-tab.svg">
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
 <noscript>
@@ -57,7 +57,7 @@
 </noscript><meta property="og:title" content="404 Page not found" />
 <meta property="og:description" content="" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="http://algorithms.github.io/404.html" />
+<meta property="og:url" content="https://antdon.github.io/algorithms.github.io/404.html" />
 
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="404 Page not found"/>
@@ -80,7 +80,7 @@
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="http://algorithms.github.io" accesskey="h" title="Anton&#39;s Algorithms (Alt + H)">Anton&#39;s Algorithms</a>
+            <a href="https://antdon.github.io/algorithms.github.io/" accesskey="h" title="Anton&#39;s Algorithms (Alt + H)">Anton&#39;s Algorithms</a>
             <div class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)">
                     <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
@@ -113,7 +113,7 @@
     </main>
     
 <footer class="footer">
-    <span>&copy; 2022 <a href="http://algorithms.github.io">Anton&#39;s Algorithms</a></span>
+    <span>&copy; 2022 <a href="https://antdon.github.io/algorithms.github.io/">Anton&#39;s Algorithms</a></span>
     <span>
         Powered by
         <a href="https://gohugo.io/" rel="noopener noreferrer" target="_blank">Hugo</a> &
